kubernetes/00-namespace-configmap.yaml
---
# Kubernetes Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: qrscanner
